fix(ui): force dark mode

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -19,6 +19,9 @@
 // }
 // @media (prefers-color-scheme: dark) {
 :root {
+    --max-width: 1100px;
+    --border-radius: 12px;
+    --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
@@ -48,14 +51,14 @@ body {
 
 body {
     color: rgb(var(--foreground-rgb));
-    background: var(--dark);
-}
+    background: linear-gradient(rgb(var(--background-start-rgb)), rgb(var(--background-end-rgb)));
 
-body>div.wrapper {
-    width: 100vw;
-    min-height: 100vh;
-    // background: radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
-    // background: linear-gradient(0deg, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
+    & div.wrapper {
+        width: 100vw;
+        min-height: 100vh;
+        // background: radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
+        // background: linear-gradient(0deg, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
+    }
 }
 
 a {
@@ -70,8 +73,8 @@ a {
     -webkit-text-fill-color: transparent;
 }
 
-@media (prefers-color-scheme: dark) {
-    html {
-        color-scheme: dark;
-    }
-}
+// @media (prefers-color-scheme: dark) {
+//     html {
+//         color-scheme: dark;
+//     }
+// }
